Integrate "app-config-data" service and enhance "twitter-to-kafka-service" with mock tweet functionality
- Added a new "app-config-data" service module with Maven setup and necessary configurations.
- Updated "twitter-to-kafka-service" to support mock tweet functionality controlled through configurations in `application.yml`.
- Introduced mock-related properties (e.g., enable mock tweets, mock tweet lengths, and sleep duration).
- Added a new exception class `TwitterToKafkaServiceException`.
- Enhanced the logging in `TwitterToKafkaServiceApplication` with dynamic welcome messages.
- Added conditional bean creation for mock and real stream runners using `ConditionalOnProperty`.

--- a/twitter-to-kafka-service/src/main/resources/application.yml
+++ b/twitter-to-kafka-service/src/main/resources/application.yml
@@ -4,3 +4,8 @@ twitter-to-kafka-service:
     - Microservices
     - Kafka
     - Elasticsearch
+  welcome-message: "Welcome to the Twitter to Kafka Service! Listening for tweets..."
+  enable-mock-tweets: true
+  mock-min-tweet-length: 5
+  mock-max-tweet-length: 15
+  mock-sleep-ms: 10000
