Introduce `common-config` module with retry configuration and Maven setup
- Added new `common-config` module with Maven wrapper, configuration files, and basic Spring Boot setup.
- Configured retry logic using Spring Retry and ExponentialBackOff policy in `RetryConfig`.
- Introduced `RetryConfigData` class for loading retry properties from `application.yml`.
- Included dependencies for `app-config-data`, `spring-retry`, and Spring Boot in `pom.xml`.
- Updated parent module to include `common-config` and added relevant dependency versions.
- Enhanced `twitter-to-kafka-service` with retry configuration properties.

--- a/common-config/pom.xml
+++ b/common-config/pom.xml
@@ -6,11 +6,12 @@
         <groupId>com.microservices.demo</groupId>
         <artifactId>microservices-demo</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
-    <artifactId>kafka-admin</artifactId>
-    <name>kafka-admin</name>
-    <description>kafka-admin</description>
+    <artifactId>common-config</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>common-config</name>
+    <description>common-config</description>
     <url/>
     <licenses>
         <license/>
@@ -34,10 +35,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -47,6 +47,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
     </dependencies>
 
