--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@
         <twitter4j.version>4.0.7</twitter4j.version>
         <lombok.version>1.18.38</lombok.version>
         <avro.version>1.11.4</avro.version>
+        <spring-kafka.version>3.3.6</spring-kafka.version>
+        <spring-retry.version>2.0.12</spring-retry.version>
     </properties>
 
     <dependencyManagement>
@@ -78,6 +80,18 @@
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro</artifactId>
                 <version>${avro.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+                <version>${spring-kafka.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.retry</groupId>
+                <artifactId>spring-retry</artifactId>
+                <version>${spring-retry.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
