Introduce Kafka configuration and admin client setup across new modules
- Consolidated Kafka-related properties into `KafkaConfigData` and `RetryConfigData` classes.
- Implemented `KafkaAdminClient` for administering Kafka topics and verifying Schema Registry status.
- Added a custom exception `KafkaClientException` for Kafka client operations.
- Created new modules under the `kafka/` directory: `kafka-admin`, `kafka-producer`, and updated `kafka-model`.
- Developed `WebClientConfig` and `KafkaAdminConfig` for reusable configuration.
- Updated parent `pom.xml` and individual module `pom.xml` files for dependencies and Maven integration.
- Integrated `common-config` and enhanced retry logic for Kafka operations.
- Refactored `application.yml` for clearer Kafka-related configurations, including topic creation properties.

--- a/kafka/kafka-model/pom.xml
+++ b/kafka/kafka-model/pom.xml
@@ -48,7 +48,7 @@
                             <goal>schema</goal>
                         </goals>
                         <configuration>
-                            <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
+                            <sourceDirectory>src/main/resources/avro/</sourceDirectory>
                             <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
                         </configuration>
                     </execution>
