Add Kafka producer configuration and integrate Avro serializer
- Introduced `KafkaProducerConfigData` class to manage producer-specific properties.
- Updated `application.yml` with Kafka producer configuration, including serializer, compression, and retry properties.
- Modified `pom.xml` files to add Confluent Avro serializer dependencies and repository.
- Refactored project structure to include necessary dependencies for Kafka producer setup.

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,15 @@
         <spring-kafka.version>3.3.6</spring-kafka.version>
         <spring-retry.version>2.0.12</spring-retry.version>
         <slf4j.version>2.0.7</slf4j.version>
+        <kafka-avro-serializer.version>7.9.1</kafka-avro-serializer.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>confluent</id>
+            <url>https://packages.confluent.io/maven/</url>
+        </repository>
+    </repositories>
 
     <dependencyManagement>
         <dependencies>
@@ -59,6 +67,11 @@
             <dependency>
                 <groupId>com.microservices.demo</groupId>
                 <artifactId>common-config</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.microservices.demo</groupId>
+                <artifactId>kafka-model</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -109,6 +122,30 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.confluent</groupId>
+                <artifactId>kafka-avro-serializer</artifactId>
+                <version>${kafka-avro-serializer.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>io.swagger</groupId>
+                        <artifactId>swagger-annotations</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>io.swagger</groupId>
+                        <artifactId>swagger-core</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
         </dependencies>
     </dependencyManagement>
