--- a/twitter-to-kafka-service/pom.xml
+++ b/twitter-to-kafka-service/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>com.microservices.demo</groupId>
     <artifactId>twitter-to-kafka-service</artifactId>
     <dependencies>
         <dependency>
